NIFI-15654 - Avoid overlapping connections, warn of existing overlaps

--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/canvas.component.scss
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/canvas.component.scss
@@ -15,6 +15,19 @@
  * limitations under the License.
  */
 
+.canvas-overlap-banner {
+    position: absolute;
+    z-index: 99;
+    top: 4px;
+    left: 46px;
+    right: 16px;
+    transition: left 150ms ease;
+
+    &.palettes-expanded {
+        left: 310px;
+    }
+}
+
 .canvas-background {
     background-size: 14px 14px;
     z-index: 1;
